--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "gatsby-plugin-create-client-paths": "2.0.0",
     "gatsby-plugin-mailchimp": "https://github.com/benjaminhoffman/gatsby-plugin-mailchimp.git#gatsby-v2",
     "gatsby-plugin-react-helmet": "3.0.0",
-    "gatsby-plugin-sharp": "2.0.5",
+    "gatsby-plugin-sharp": "2.0.36",
     "gatsby-source-filesystem": "2.0.1",
     "gatsby-transformer-sharp": "2.1.3",
     "generate": "0.14.0",
@@ -22,6 +22,7 @@
     "react-slick": "0.23.1",
     "react-spring": "8.0.2",
     "react-toastify": "5.0.0-rc.6",
+    "sharp": "0.22.1",
     "slick-carousel": "1.8.1"
   },
   "keywords": [
