--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby-plugin-mailchimp": "https://github.com/benjaminhoffman/gatsby-plugin-mailchimp.git#gatsby-v2",
     "gatsby-plugin-react-helmet": "3.0.0",
     "gatsby-plugin-sharp": "2.0.36",
+    "gatsby-source-contentful": "2.0.55",
     "gatsby-source-filesystem": "2.0.1",
     "gatsby-transformer-sharp": "2.1.3",
     "generate": "0.14.0",
@@ -41,24 +42,24 @@
     "heroku-postbuild": "gatsby build"
   },
   "devDependencies": {
-    "@babel/core": "7.1.0",
-    "@babel/plugin-proposal-class-properties": "7.1.0",
-    "@babel/plugin-proposal-optional-chaining": "7.0.0",
-    "@babel/preset-env": "7.1.0",
+    "@babel/core": "7.4.4",
+    "@babel/plugin-proposal-class-properties": "7.4.4",
+    "@babel/plugin-proposal-optional-chaining": "7.2.0",
+    "@babel/preset-env": "7.4.4",
     "@babel/preset-react": "7.0.0",
     "babel-core": "^7.0.0-0",
-    "babel-eslint": "10.0.0",
-    "babel-jest": "23.6.0",
-    "babel-preset-gatsby-package": "0.1.2",
-    "eslint": "5.6.0",
-    "eslint-plugin-react": "7.11.1",
-    "gatsby-plugin-purgecss": "3.1.0",
+    "babel-eslint": "10.0.1",
+    "babel-jest": "22.4.3",
+    "babel-preset-gatsby-package": "0.1.4",
+    "eslint": "5.16.0",
+    "eslint-plugin-react": "7.13.0",
+    "gatsby-plugin-purgecss": "3.1.1",
     "ghooks": "2.0.4",
-    "jest-dom": "2.1.0",
-    "lint-staged": "7.3.0",
-    "prettier": "1.14.3",
-    "react-test-renderer": "16.5.2",
-    "react-testing-library": "5.2.0"
+    "jest-dom": "3.2.2",
+    "lint-staged": "8.1.6",
+    "prettier": "1.17.0",
+    "react-test-renderer": "16.8.6",
+    "react-testing-library": "7.0.0"
   },
   "lint-staged": {
     "src/**/*.js": [
@@ -75,7 +76,8 @@
   "jest": {
     "setupTestFrameworkScriptFile": "<rootDir>/tests/setup-test-env.js",
     "testPathIgnorePatterns": [
-      "node_modules",
+      "/node_modules/",
+      "/internals/",
       ".cache"
     ],
     "transform": {
