--- a/package.json
+++ b/package.json
@@ -3,26 +3,26 @@
   "version": "1.0.0",
   "repository": "Vets-Who-Code/vwc-site",
   "dependencies": {
-    "@reach/dialog": "0.2.1",
-    "gatsby": "2.0.11",
-    "gatsby-image": "2.0.12",
-    "gatsby-link": "2.0.5",
-    "gatsby-plugin-create-client-paths": "2.0.0",
+    "@reach/dialog": "0.2.8",
+    "gatsby": "2.4.3",
+    "gatsby-image": "2.0.41",
+    "gatsby-link": "2.1.1",
+    "gatsby-plugin-create-client-paths": "2.0.5",
     "gatsby-plugin-mailchimp": "https://github.com/benjaminhoffman/gatsby-plugin-mailchimp.git#gatsby-v2",
-    "gatsby-plugin-react-helmet": "3.0.0",
-    "gatsby-plugin-sharp": "2.0.36",
-    "gatsby-source-contentful": "2.0.55",
-    "gatsby-source-filesystem": "2.0.1",
-    "gatsby-transformer-sharp": "2.1.3",
+    "gatsby-plugin-react-helmet": "3.0.12",
+    "gatsby-plugin-sharp": "2.0.37",
+    "gatsby-source-contentful": "2.0.56",
+    "gatsby-source-filesystem": "2.0.33",
+    "gatsby-transformer-sharp": "2.1.19",
     "generate": "0.14.0",
-    "jest": "23.6.0",
-    "react": "16.5.2",
-    "react-dom": "16.5.2",
-    "react-helmet": "5.2.0",
-    "react-modal": "3.6.1",
-    "react-slick": "0.23.1",
-    "react-spring": "8.0.2",
-    "react-toastify": "5.0.0-rc.6",
+    "jest": "24.8.0",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
+    "react-helmet": "5.2.1",
+    "react-modal": "3.8.1",
+    "react-slick": "0.24.0",
+    "react-spring": "8.0.20",
+    "react-toastify": "5.1.0",
     "sharp": "0.22.1",
     "slick-carousel": "1.8.1"
   },
@@ -74,7 +74,9 @@
     }
   },
   "jest": {
-    "setupTestFrameworkScriptFile": "<rootDir>/tests/setup-test-env.js",
+    "setupFilesAfterEnv": [
+      "<rootDir>/tests/setup-test-env.js"
+    ],
     "testPathIgnorePatterns": [
       "/node_modules/",
       "/internals/",
