--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "babel-eslint": "10.0.1",
     "babel-jest": "24.8.0",
     "babel-preset-gatsby-package": "0.1.4",
+    "cross-env": "5.2.0",
     "eslint": "5.16.0",
     "eslint-plugin-react": "7.13.0",
     "gatsby-plugin-purgecss": "3.1.1",
