--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "develop": "cross-env GATSBY_GRAPHQL_IDE=playground gatsby develop",
     "format": "prettier --write \"src/**/*.js\"",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -72,38 +72,6 @@
   "config": {
     "ghooks": {
       "pre-commit": "yarn lint; yarn test"
-    }
-  },
-  "jest": {
-    "setupFilesAfterEnv": [
-      "<rootDir>/tests/setup-test-env.js"
-    ],
-    "testPathIgnorePatterns": [
-      "/node_modules/",
-      "/internals/",
-      ".cache"
-    ],
-    "transform": {
-      "^.+\\.jsx?$": "<rootDir>/tests/jest-preprocess.js"
-    },
-    "transformIgnorePatterns": [
-      "node_modules/(?!(gatsby)/)"
-    ],
-    "globals": {
-      "__PATH_PREFIX__": ""
-    },
-    "setupFiles": [
-      "./tests/jest-preprocess.js",
-      "./tests/loadershim.js"
-    ],
-    "collectCoverageFrom": [
-      "src/components/**/*.{js,jsx}",
-      "src/pages/**/*.{js,jsx}",
-      "!/static/vendor/jquery/dist"
-    ],
-    "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/tests/__mocks__/image-mock.js",
-      "\\.(css|scss|sass)$": "<rootDir>/tests/__mocks__/style-mock.js"
     }
   }
 }
