--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "cross-env GATSBY_GRAPHQL_IDE=playground gatsby develop",
-    "format": "prettier --write \"src/**/*.js\"",
+    "format:src": "prettier --write \"src/**/*.js\"",
+    "format:config": "prettier --write \"gatsby-*.js\"",
+    "format": "npm run format:src && npm run format:config",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --env=jsdom --coverage",
