--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
   },
   "config": {
     "ghooks": {
-      "pre-commit": "yarn lint; yarn test"
+      "pre-commit": "npm run lint; npm run format; npm run test"
     }
   }
 }
