Remove unused import statements and format

--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
   "lint-staged": {
     "src/**/*.js": [
       "eslint",
-      "yarn format",
+      "npm run format",
       "git add"
     ]
   },
