--- a/package.json
+++ b/package.json
@@ -3,39 +3,41 @@
   "version": "1.0.0",
   "repository": "Vets-Who-Code/vwc-site",
   "dependencies": {
-    "@contentful/rich-text-react-renderer": "13.2.0",
-    "babel-preset-gatsby": "0.2.0",
+    "@contentful/rich-text-react-renderer": "13.4.0",
+    "@contentful/rich-text-types": "14.0.1",
+    "@testing-library/jest-dom": "5.1.1",
+    "babel-preset-gatsby": "0.2.29",
     "dotenv": "8.2.0",
-    "gatsby": "2.11.7",
-    "gatsby-background-image": "0.7.6",
-    "gatsby-image": "2.2.3",
-    "gatsby-link": "2.2.0",
-    "gatsby-plugin-create-client-paths": "2.1.1",
+    "gatsby": "2.19.17",
+    "gatsby-background-image": "0.9.16",
+    "gatsby-image": "2.2.41",
+    "gatsby-link": "2.2.29",
+    "gatsby-plugin-create-client-paths": "2.1.22",
     "gatsby-plugin-favicon": "3.1.6",
     "gatsby-plugin-gtag": "^1.0.11",
-    "gatsby-plugin-mailchimp": "https://github.com/benjaminhoffman/gatsby-plugin-mailchimp.git#gatsby-v2",
-    "gatsby-plugin-prefetch-google-fonts": "1.4.2",
-    "gatsby-plugin-react-helmet": "3.1.0",
-    "gatsby-plugin-sharp": "2.2.1",
-    "gatsby-source-contentful": "2.1.54",
-    "gatsby-source-filesystem": "2.1.1",
-    "gatsby-transformer-sharp": "2.2.0",
+    "gatsby-plugin-mailchimp": "5.1.2",
+    "gatsby-plugin-prefetch-google-fonts": "1.4.3",
+    "gatsby-plugin-react-helmet": "3.1.22",
+    "gatsby-plugin-sharp": "2.4.5",
+    "gatsby-source-contentful": "2.1.86",
+    "gatsby-source-filesystem": "2.1.48",
+    "gatsby-transformer-sharp": "2.3.14",
     "generate": "0.14.0",
     "intersection-observer": "0.7.0",
-    "nuka-carousel": "4.5.9",
-    "prettier": "1.18.2",
-    "react": "16.8.6",
-    "react-dom": "16.8.6",
+    "nuka-carousel": "4.6.3",
+    "prettier": "1.19.1",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
     "react-helmet": "5.2.1",
-    "react-modal": "3.8.2",
-    "react-slick": "0.24.0",
-    "react-toastify": "5.3.1",
+    "react-modal": "3.11.1",
+    "react-slick": "0.25.2",
+    "react-toastify": "5.5.0",
     "reading-time": "1.2.0",
-    "sharp": "0.22.1",
+    "sharp": "0.24.0",
     "slick-carousel": "1.8.1",
-    "typeface-lato": "0.0.54",
-    "typeface-roboto-slab": "0.0.72",
-    "typeface-source-sans-pro": "0.0.54"
+    "typeface-lato": "0.0.75",
+    "typeface-roboto-slab": "1.1.3",
+    "typeface-source-sans-pro": "0.0.75"
   },
   "keywords": [
     "gatsby"
@@ -44,6 +46,7 @@
   "scripts": {
     "clean": "gatsby clean",
     "build": "gatsby build",
+    "gen:icon": "node scripts/build-icon-json.js",
     "develop": "cross-env GATSBY_GRAPHQL_IDE=playground gatsby develop",
     "format:src": "prettier --write \"src/**/*.js\"",
     "format:config": "prettier --write \"gatsby-*.js\"",
@@ -56,23 +59,24 @@
     "heroku-postbuild": "gatsby build"
   },
   "devDependencies": {
-    "@babel/core": "7.5.4",
-    "@testing-library/react": "8.0.4",
-    "babel-eslint": "10.0.2",
-    "babel-jest": "24.8.0",
-    "babel-preset-gatsby-package": "0.2.0",
-    "cross-env": "6.0.3",
-    "eslint": "6.0.1",
-    "eslint-config-prettier": "6.0.0",
-    "eslint-plugin-prettier": "3.1.0",
-    "eslint-plugin-react": "7.14.2",
-    "eslint-plugin-react-hooks": "1.6.1",
-    "gatsby-plugin-purgecss": "4.0.0",
+    "@babel/core": "7.8.4",
+    "@testing-library/react": "9.4.0",
+    "babel-eslint": "10.0.3",
+    "babel-jest": "25.1.0",
+    "babel-preset-gatsby-package": "0.2.16",
+    "chalk": "3.0.0",
+    "cross-env": "7.0.0",
+    "eslint": "6.8.0",
+    "eslint-config-prettier": "6.10.0",
+    "eslint-plugin-prettier": "3.1.2",
+    "eslint-plugin-react": "7.18.3",
+    "eslint-plugin-react-hooks": "2.3.0",
+    "gatsby-plugin-purgecss": "4.0.1",
     "ghooks": "2.0.4",
-    "jest": "24.8.0",
-    "jest-dom": "3.5.0",
-    "lint-staged": "9.0.0",
-    "react-test-renderer": "16.8.6"
+    "jest": "25.1.0",
+    "lint-staged": "10.0.7",
+    "react-test-renderer": "16.12.0",
+    "svgson": "4.0.0"
   },
   "lint-staged": {
     "src/**/*.js": [
@@ -87,6 +91,6 @@
     }
   },
   "resolutions": {
-    "sharp": "0.22.1"
+    "sharp": "0.23.2"
   }
 }
