--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,9 @@
 {
+  "plugins": [
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-proposal-optional-chaining"
+  ],
   "presets": [
-    [
-      "babel-preset-gatsby",
-      {
-        "targets": {
-          "browsers": [">0.25%", "not dead"]
-        }
-      }
-    ],
     [
       "@babel/preset-react",
       {
