--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,5 @@
 {
-  "plugins": [
-    "@babel/plugin-proposal-class-properties",
-    "@babel/plugin-proposal-optional-chaining"
-  ],
+  "plugins": ["@babel/plugin-proposal-class-properties", "@babel/plugin-proposal-optional-chaining"],
   "presets": [
     [
       "@babel/preset-react",
