--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "repository": "Vets-Who-Code/vwc-site",
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "14.1.1",
     "@hot-loader/react-dom": "17.0.0",
     "babel-preset-gatsby": "0.5.14",
+    "date-fns": "2.16.1",
     "dotenv": "8.2.0",
     "gatsby": "2.24.85",
     "gatsby-background-image": "1.1.2",
@@ -18,6 +20,7 @@
     "gatsby-plugin-react-helmet": "3.3.14",
     "gatsby-plugin-sharp": "2.6.43",
     "gatsby-plugin-webfonts": "1.1.3",
+    "gatsby-source-contentful": "3.0.3",
     "gatsby-source-filesystem": "2.3.35",
     "gatsby-transformer-sharp": "2.5.19",
     "generate": "0.14.0",
@@ -41,9 +44,7 @@
     "slick-carousel": "1.8.1",
     "typeface-lato": "1.1.13",
     "typeface-roboto-slab": "1.1.13",
-    "typeface-source-sans-pro": "1.1.13",
-    "@contentful/rich-text-react-renderer": "14.1.1",
-    "gatsby-source-contentful": "3.0.3"
+    "typeface-source-sans-pro": "1.1.13"
   },
   "keywords": [
     "gatsby"
@@ -92,7 +93,8 @@
     "npm-run-all": "4.1.5",
     "prettier": "2.1.2",
     "pretty-quick": "3.1.0",
-    "react-test-renderer": "17.0.1"
+    "react-test-renderer": "17.0.1",
+    "regenerator-runtime": "0.13.7"
   },
   "lint-staged": {
     "*": "yarn format"
