--- a/package.json
+++ b/package.json
@@ -5,24 +5,8 @@
   "dependencies": {
     "@contentful/rich-text-react-renderer": "14.1.1",
     "@hot-loader/react-dom": "17.0.0",
-    "babel-preset-gatsby": "0.5.14",
     "date-fns": "2.16.1",
     "dotenv": "8.2.0",
-    "gatsby": "2.24.85",
-    "gatsby-background-image": "1.1.2",
-    "gatsby-image": "2.4.21",
-    "gatsby-link": "2.4.16",
-    "gatsby-plugin-create-client-paths": "2.3.13",
-    "gatsby-plugin-favicon": "3.1.6",
-    "gatsby-plugin-gtag": "^1.0.13",
-    "gatsby-plugin-mailchimp": "5.2.2",
-    "gatsby-plugin-preload-fonts": "1.4.0",
-    "gatsby-plugin-react-helmet": "3.3.14",
-    "gatsby-plugin-sharp": "2.6.43",
-    "gatsby-plugin-webfonts": "1.1.3",
-    "gatsby-source-contentful": "3.0.3",
-    "gatsby-source-filesystem": "2.3.35",
-    "gatsby-transformer-sharp": "2.5.19",
     "generate": "0.14.0",
     "intersection-observer": "0.11.0",
     "next": "latest",
@@ -40,26 +24,17 @@
     "react-toastify": "6.0.9",
     "react-typed": "^1.2.0",
     "reading-time": "1.2.0",
-    "sharp": "0.26.2",
-    "slick-carousel": "1.8.1",
-    "typeface-lato": "1.1.13",
-    "typeface-roboto-slab": "1.1.13",
-    "typeface-source-sans-pro": "1.1.13"
+    "slick-carousel": "1.8.1"
   },
   "keywords": [
     "gatsby"
   ],
   "license": "MIT",
   "scripts": {
-    "build:old": "gatsby build",
-    "build:prod": "yarn enable:contentful && yarn && gatsby build",
-    "clean": "gatsby clean",
-    "preload-fonts": "gatsby-preload-fonts",
     "develop": "node ./scripts/pre-start",
     "disable:contentful": "node -e 'require(\"./scripts/disable-contentful-modules.js\").resetConfig()'",
     "enable:contentful": "node -e 'require(\"./scripts/enable-contentful-modules.js\").enableContentfulContent()'",
     "format": "pretty-quick --staged",
-    "gatsby:develop": "gatsby develop",
     "test": "jest",
     "lint": "eslint src",
     "test:coverage": "jest --env=jsdom --coverage",
@@ -69,8 +44,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "npm run build && next export",
-    "prod:build": "NODE_ENV=production npm run build"
+    "export": "npm run build && next export"
   },
   "devDependencies": {
     "@babel/core": "7.12.3",
@@ -78,7 +52,6 @@
     "@testing-library/react": "11.1.0",
     "babel-eslint": "10.1.0",
     "babel-jest": "26.6.1",
-    "babel-preset-gatsby-package": "0.5.3",
     "cross-spawn": "7.0.3",
     "cross-spawn-with-kill": "1.0.0",
     "eslint": "7.12.0",
@@ -86,7 +59,6 @@
     "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "4.2.0",
-    "gatsby-plugin-purgecss": "5.0.0",
     "inquirer": "7.3.3",
     "jest": "26.6.1",
     "lint-staged": "10.4.2",
