--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "repository": "Vets-Who-Code/vwc-site",
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "7.12.1",
     "@hot-loader/react-dom": "17.0.0",
     "date-fns": "2.16.1",
     "dotenv": "8.2.0",
