--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "repository": "Vets-Who-Code/vwc-site",
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "7.12.1",
+    "@babel/plugin-proposal-optional-chaining": "7.12.7",
     "@hot-loader/react-dom": "17.0.0",
     "date-fns": "2.16.1",
     "dotenv": "8.2.0",
