--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "7.12.1",
     "@babel/plugin-proposal-optional-chaining": "7.12.7",
+    "@babel/preset-react": "7.12.10",
     "@hot-loader/react-dom": "17.0.0",
     "date-fns": "2.16.1",
     "dotenv": "8.2.0",
