--- a/.netlify.toml
+++ b/.netlify.toml
@@ -1,7 +1,7 @@
 [build]
-  command   = "yarn build"
+  command   = "npm run build"
   functions = "out_functions"
-  publish   = "build"
+  publish   = "out_publish"
 [dev]
   functions = "out_functions"
   publish   = "out_publish"
@@ -9,3 +9,11 @@
   # detects Next.js and redirects do not work.
   # Read more: https://github.com/netlify/cli/blob/master/docs/netlify-dev.md#project-detection
   framework = "#static"
+[[plugins]]
+package = "netlify-plugin-cache-nextjs"
+    # These options will cache the build directory at `${NETLIFY_BASE}/frontend/.next-build`
+    # [plugins.inputs]
+    # The path to the build directory
+    # build_dir_path = "frontend"
+    # Custom build directory if you aren't using `.next` (https://nextjs.org/docs/api-reference/next.config.js/setting-a-custom-build-directory)
+    # custom_build_dir_name = ".next-build"
