--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "npm run build && next export"
+    "export": "npm run build && next export",
+    "postbuild": "next-on-netlify"
   },
   "devDependencies": {
     "@babel/core": "7.12.3",
