--- a/package.json
+++ b/package.json
@@ -47,8 +47,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "npm run build && next export",
-    "postbuild": "next-on-netlify"
+    "export": "npm run build && next export"
   },
   "devDependencies": {
     "@babel/core": "7.12.3",
