--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "npm run build && next export"
+    "export": "next export"
   },
   "devDependencies": {
     "@babel/core": "7.12.3",
