--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "10.0.9",
     "next-compose-plugins": "2.2.1",
     "next-images": "1.7.0",
+    "next-on-netlify": "2.9.0",
     "next-videos": "1.4.0",
     "nuka-carousel": "4.7.7",
     "react": "17.0.2",
@@ -45,15 +46,14 @@
     "test:watch": "jest --watch",
     "view:coverage": "open coverage/lcov-report/index.html",
     "yarn:install": "yarn",
-    "dev": "next dev",
+    "dev": "next",
     "build": "next build",
-    "start": "next start",
-    "export": "next export"
+    "postbuild": "next-on-netlify"
   },
   "devDependencies": {
     "@babel/core": "7.13.10",
     "@babel/preset-env": "7.13.12",
-    "@testing-library/jest-dom": "5.11.9",
+    "@testing-library/jest-dom": "5.11.10",
     "@testing-library/react": "11.2.5",
     "babel-eslint": "10.1.0",
     "babel-jest": "26.6.3",
