--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,6 @@
 {
-  "plugins": ["@babel/plugin-proposal-class-properties", "@babel/plugin-proposal-optional-chaining"],
+  "plugins": ["@babel/plugin-proposal-class-properties",
+    "@babel/plugin-proposal-optional-chaining", "@babel/plugin-transform-runtime",],
   "presets": [
     [
       "@babel/preset-react",
