--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "7.13.0",
     "@babel/plugin-proposal-optional-chaining": "7.13.12",
+    "@babel/plugin-transform-runtime": "7.13.10",
     "@babel/preset-react": "7.12.13",
     "@contentful/rich-text-react-renderer": "14.1.2",
     "@hot-loader/react-dom": "17.0.1",
