--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,12 @@
 {
-  "plugins": ["@babel/plugin-proposal-class-properties",
-    "@babel/plugin-proposal-optional-chaining", "@babel/plugin-transform-runtime",],
   "presets": [
+    "next/babel",
     [
       "@babel/preset-react",
       {
         "runtime": "automatic"
       }
-    ],
-    "@babel/preset-env"
-  ]
+    ]
+  ],
+  "plugins": ["@babel/plugin-proposal-class-properties", "@babel/plugin-proposal-optional-chaining"]
 }
