--- a/.netlify.toml
+++ b/.netlify.toml
@@ -2,6 +2,8 @@
   command   = "yarn run build"
   functions = "out_functions"
   publish   = "out_publish"
+[[plugins]]
+  package = "@netlify/plugin-nextjs"
 [dev]
   functions = "out_functions"
   publish   = "out_publish"
